--- a/spec/dummy/config/locales/en.yml
+++ b/spec/dummy/config/locales/en.yml
@@ -1,23 +1,15 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  activeadmin_jobs:
+    job_example:
+      pending:
+        title: "Pending Job"
+        one: "job added to the queue..."
+        other: "jobs were added to the queue..."
+      finished:
+        title: "Finished Job!"
+        one: "the job was completed! :)"
+        other: "jobs where completed! :)"
+      failed:
+        title: "Failed Job"
+        one: "the job was not completed :("
+        other: "jobs where not completed :("
