feat(ActiveAdmin.Jobs): show description row/column

--- a/config/locales/activeadmin_jobs.en.yml
+++ b/config/locales/activeadmin_jobs.en.yml
@@ -18,6 +18,7 @@ en:
         job_class: Job Type
         status: Status
         result: Result
+        description: Description
         notified: Notified?
         created_at: Created At
         updated_at: Updated At
